added deployment shit

--- a/logs.html
+++ b/logs.html
@@ -820,7 +820,8 @@
         </div>
     </main>
 
-    <script src="logs.js"></script>
+    <script src="config.js"></script>
+  <script src="logs.js"></script>
     <script>
         // Custom Cursor Animation
         const cursor = document.querySelector('.cursor');
