--- a/quiz.html
+++ b/quiz.html
@@ -841,7 +841,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="quiz.js"></script>
+    <script src="config.js"></script>
+  <script src="quiz.js"></script>
     <script>
         // Custom Cursor Animation
         const cursor = document.querySelector('.cursor');
