--- a/timetable.html
+++ b/timetable.html
@@ -961,7 +961,8 @@
         </div>
     </main>
 
-    <script src="timetable.js"></script>
+    <script src="config.js"></script>
+  <script src="timetable.js"></script>
     <script>
         // Custom Cursor Animation
         const cursor = document.querySelector('.cursor');
